// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDebugFiles renders 1`] = `
<ProjectDebugSymbols
  params={
    Object {
      "orgId": "org",
      "projectId": "project",
    }
  }
>
  <SettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  >
    <Wrapper>
      <div
        className="css-1r5ylk7-Wrapper e1ievzxl2"
      >
        <Flex
          align="center"
        >
          <Base
            align="center"
            className="css-5ipae5"
          >
            <div
              className="css-5ipae5"
              is={null}
            >
              <Title
                styled={false}
              >
                <Base
                  className="css-1ky52ze-Title e1ievzxl0"
                >
                  <div
                    className="css-1ky52ze-Title e1ievzxl0"
                    is={null}
                  >
                    <HeaderTitle>
                      <h4
                        className="css-1w8ttcn-HeaderTitle elc10ae2"
                      >
                        Debug Information Files
                      </h4>
                    </HeaderTitle>
                  </div>
                </Base>
              </Title>
            </div>
          </Base>
        </Flex>
      </div>
    </Wrapper>
  </SettingsPageHeading>
  <TextBlock>
    <Component
      className="css-1geyb25-TextBlock e12j2fov0"
    >
      <div
        className="css-1geyb25-TextBlock e12j2fov0"
      >
        
          Here you can find all your uploaded debug information files (dSYMs, ProGuard, Breakpad ...).
          This is used to convert addresses and minified function names from crash dumps
          into function names and locations.
      </div>
    </Component>
  </TextBlock>
  <Panel>
    <Component
      className="css-yahxlu-Panel e16u4s2c0"
    >
      <div
        className="css-yahxlu-Panel e16u4s2c0"
      >
        <PanelHeader
          hasButtons={true}
        >
          <Component
            className="css-jmvceg-PanelHeader-getPadding e1o9kety0"
            hasButtons={true}
          >
            <Flex
              align="center"
              className="css-jmvceg-PanelHeader-getPadding e1o9kety0"
              justify="space-between"
            >
              <Base
                align="center"
                className="e1o9kety0 css-19i62qd-PanelHeader-getPadding"
                justify="space-between"
              >
                <div
                  className="e1o9kety0 css-19i62qd-PanelHeader-getPadding"
                  is={null}
                >
                  <Box
                    w={0.375}
                  >
                    <Base
                      className="css-cxbzjr"
                      w={0.375}
                    >
                      <div
                        className="css-cxbzjr"
                        is={null}
                      >
                        Debug ID
                      </div>
                    </Base>
                  </Box>
                  <Box
                    flex="1"
                  >
                    <Base
                      className="css-vti0ei"
                      flex="1"
                    >
                      <div
                        className="css-vti0ei"
                        is={null}
                      >
                        Name
                      </div>
                    </Base>
                  </Box>
                  <Box>
                    <Base
                      className="css-roynbj"
                    >
                      <div
                        className="css-roynbj"
                        is={null}
                      >
                        <withRouter(AsyncComponentSearchInput)
                          api={Client {}}
                          className="search"
                          onError={[Function]}
                          onSuccess={[Function]}
                          placeholder="Search DIFs"
                          stateKey="debugFiles"
                          updateRoute={true}
                          url="/projects/org/project/files/dsyms/"
                        >
                          <AsyncComponentSearchInput
                            api={Client {}}
                            className="search"
                            debounceWait={200}
                            location={
                              Object {
                                "query": Object {},
                              }
                            }
                            onError={[Function]}
                            onSuccess={[Function]}
                            placeholder="Search DIFs"
                            router={
                              Object {
                                "createHref": [MockFunction],
                                "go": [MockFunction],
                                "goBack": [MockFunction],
                                "goForward": [MockFunction],
                                "isActive": [MockFunction],
                                "listen": [MockFunction],
                                "location": Object {
                                  "query": Object {},
                                },
                                "push": [MockFunction],
                                "replace": [MockFunction],
                                "setRouteLeaveHook": [MockFunction],
                              }
                            }
                            stateKey="debugFiles"
                            updateRoute={true}
                            url="/projects/org/project/files/dsyms/"
                          >
                            <Form
                              onSubmit={[Function]}
                            >
                              <form
                                className="css-vfrmj7-Form eohhsvj1"
                                onSubmit={[Function]}
                              >
                                <Input
                                  className="search"
                                  onChange={[Function]}
                                  placeholder="Search DIFs"
                                  value=""
                                >
                                  <input
                                    className="search css-pzg7em-Input-inputStyles e1ebb8kf0"
                                    onChange={[Function]}
                                    placeholder="Search DIFs"
                                    value=""
                                  />
                                </Input>
                              </form>
                            </Form>
                          </AsyncComponentSearchInput>
                        </withRouter(AsyncComponentSearchInput)>
                      </div>
                    </Base>
                  </Box>
                </div>
              </Base>
            </Flex>
          </Component>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className="css-9vq8an-textStyles"
          >
            <EmptyStateWarning
              small={false}
            >
              <EmptyStreamWrapper
                data-test-id="empty-state"
              >
                <div
                  className="css-zsnx2m-EmptyStreamWrapper er00ms90"
                  data-test-id="empty-state"
                >
                  <HeroIcon
                    size="54"
                    src="icon-circle-exclamation"
                  >
                    <Component
                      className="css-1j03cl-HeroIcon e723dkq0"
                      size="54"
                      src="icon-circle-exclamation"
                    >
                      <InlineSvg
                        className="css-1j03cl-HeroIcon e723dkq0"
                        size="54"
                        src="icon-circle-exclamation"
                      >
                        <StyledSvg
                          className="css-1j03cl-HeroIcon e723dkq0"
                          height="54"
                          viewBox={Object {}}
                          width="54"
                        >
                          <svg
                            className="e723dkq0 css-196iyqp-StyledSvg-HeroIcon ebb48o80"
                            height="54"
                            viewBox={Object {}}
                            width="54"
                          >
                            <use
                              href="#test"
                              xlinkHref="#test"
                            />
                          </svg>
                        </StyledSvg>
                      </InlineSvg>
                    </Component>
                  </HeroIcon>
                  <p>
                    There are no debug symbols for this project.
                  </p>
                </div>
              </EmptyStreamWrapper>
            </EmptyStateWarning>
          </div>
        </PanelBody>
      </div>
    </Component>
  </Panel>
  <Pagination
    className="stream-pagination"
    onCursor={[Function]}
  />
</ProjectDebugSymbols>
`;

exports[`ProjectDebugFiles renders empty 1`] = `
<Fragment>
  <SettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  />
  <TextBlock>
    
          Here you can find all your uploaded debug information files (dSYMs, ProGuard, Breakpad ...).
          This is used to convert addresses and minified function names from crash dumps
          into function names and locations.
  </TextBlock>
  <Panel>
    <PanelHeader
      hasButtons={true}
    >
      <Box
        w={0.375}
      >
        Debug ID
      </Box>
      <Box
        flex="1"
      >
        Name
      </Box>
      <Box>
        <withRouter(AsyncComponentSearchInput)
          api={Client {}}
          className="search"
          onError={[Function]}
          onSuccess={[Function]}
          placeholder="Search DIFs"
          stateKey="debugFiles"
          updateRoute={true}
          url="/projects/org/project/files/dsyms/"
        />
      </Box>
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <EmptyStateWarning
        small={false}
      >
        <p>
          There are no debug symbols for this project.
        </p>
      </EmptyStateWarning>
    </PanelBody>
  </Panel>
  <Pagination
    className="stream-pagination"
    onCursor={[Function]}
  />
</Fragment>
`;
